--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -22,6 +22,10 @@ html, body{
     -webkit-overflow-scrolling: touch;
     overflow-scrolling: touch;
 }
+.height40 {
+    width: 100%;
+    height: 40px;
+}
 .border-bottom {
   border-bottom: 1Px solid #f4f4f4;
 }
@@ -43,6 +47,9 @@ html, body{
     &:hover {
         background:#ddd;
     }
+}
+.back-white {
+  background: white;
 }
 
 
