--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -51,7 +51,9 @@ html, body{
 .back-white {
   background: white;
 }
-
+.container {
+  padding-top: 80px;
+}
 
 .primary-button {
   margin-top: 10px;
